# translator-server

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.cpu.txt  requirements.cuda.txt  requirements.txt  run_service.bat
src/translator_server/: app.py  config.py  exceptions.py  main.py  schemas.py  security.py
src/translator_server/services/: __init__.py  language_detector.py  m2m_translator.py  translation_service.py
